--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjQyfWTvxQhN4PicsFlHOY",
+      "authorship_tag": "ABX9TyN8ReUFVXWRjoovtpwPgCdA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3188,7 +3188,8 @@
     {
       "cell_type": "code",
       "source": [
-        "df['gama'] = df['quality'].apply(gama)\n",
+        "#df['gama'] = df['quality'].apply(gama)\n",
+        "df['gama'] = df['quality'].apply(lambda x: 'Baja' if x <= 3 else ('Media' if x <= 6 else ('Alta' if x <= 8 else 'Superior')))\n",
         "df.head()"
       ],
       "metadata": {
@@ -3197,9 +3198,9 @@
           "height": 206
         },
         "id": "PqJQCefcbsOj",
-        "outputId": "6cf092cf-c19e-4f55-94cb-05f732e6e9ae"
+        "outputId": "aa3cedfa-f236-48d0-f918-cf4a0e8fe1c6"
       },
-      "execution_count": 43,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3228,7 +3229,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c54d9f7e-119e-47bb-a155-7d9efcc7bd41\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7cea36aa-2963-4801-9e06-00b09fbbd2d3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3355,7 +3356,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c54d9f7e-119e-47bb-a155-7d9efcc7bd41')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7cea36aa-2963-4801-9e06-00b09fbbd2d3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3407,12 +3408,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c54d9f7e-119e-47bb-a155-7d9efcc7bd41 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7cea36aa-2963-4801-9e06-00b09fbbd2d3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c54d9f7e-119e-47bb-a155-7d9efcc7bd41');\n",
+              "        const element = document.querySelector('#df-7cea36aa-2963-4801-9e06-00b09fbbd2d3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3432,8 +3433,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-81800f64-56de-43b9-be63-5535b59a9cf8\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-81800f64-56de-43b9-be63-5535b59a9cf8')\"\n",
+              "<div id=\"df-f47a548e-5529-45f7-99a6-c1c1af018abf\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f47a548e-5529-45f7-99a6-c1c1af018abf')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3552,7 +3553,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-81800f64-56de-43b9-be63-5535b59a9cf8 button');\n",
+              "        document.querySelector('#df-f47a548e-5529-45f7-99a6-c1c1af018abf button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -3569,7 +3570,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 46
         }
       ]
     },
@@ -3579,12 +3580,12 @@
         "df.pivot_table(index=['type','gama'], aggfunc='size')"
       ],
       "metadata": {
-        "id": "zMzZhYHzcCiM",
-        "outputId": "1c324efb-0791-4f7a-8f45-fca69e13998b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 335
-        }
+        },
+        "id": "zMzZhYHzcCiM",
+        "outputId": "1c324efb-0791-4f7a-8f45-fca69e13998b"
       },
       "execution_count": 44,
       "outputs": [
