--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8ReUFVXWRjoovtpwPgCdA",
+      "authorship_tag": "ABX9TyPqff3CAPUW3CmYA8ZA/OZG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "ZcCNhdHM_4K_"
       },
@@ -122,7 +122,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **1️⃣ Adquisición de Datos**"
+        "### **1️⃣ Adquisición de Datos**\n",
+        "---\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "52LXCUzF3VDW"
@@ -143,9 +146,9 @@
           "height": 206
         },
         "id": "w0ux86UfDkJD",
-        "outputId": "1f824c4f-c417-414f-b635-69b65ffdbe3b"
+        "outputId": "07f57efa-483b-4ac0-cdb5-fc1d14503d4e"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -174,7 +177,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-187e6838-a2b4-4eb7-b89c-455911ef5ebe\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9fb5430c-eed0-49fd-91b1-62bba7e94ae2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -295,7 +298,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-187e6838-a2b4-4eb7-b89c-455911ef5ebe')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9fb5430c-eed0-49fd-91b1-62bba7e94ae2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -347,12 +350,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-187e6838-a2b4-4eb7-b89c-455911ef5ebe button.colab-df-convert');\n",
+              "        document.querySelector('#df-9fb5430c-eed0-49fd-91b1-62bba7e94ae2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-187e6838-a2b4-4eb7-b89c-455911ef5ebe');\n",
+              "        const element = document.querySelector('#df-9fb5430c-eed0-49fd-91b1-62bba7e94ae2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -372,8 +375,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3afddbfe-0761-4907-a791-39ef5146fcef\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3afddbfe-0761-4907-a791-39ef5146fcef')\"\n",
+              "<div id=\"df-89b2c476-8a5c-4ebb-a6c5-a43f76ef86b3\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-89b2c476-8a5c-4ebb-a6c5-a43f76ef86b3')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -492,7 +495,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3afddbfe-0761-4907-a791-39ef5146fcef button');\n",
+              "        document.querySelector('#df-89b2c476-8a5c-4ebb-a6c5-a43f76ef86b3 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -509,14 +512,15 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### **2️⃣ Análisis Exploratorio de Datos (EDA)**"
+        "### **2️⃣ Data Wrangling**\n",
+        "---\n"
       ],
       "metadata": {
         "id": "WwPtH_Lc6I0w"
@@ -581,9 +585,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "swUMxE7mEatR",
-        "outputId": "8a66f76d-e691-43e8-f45e-49bbe41987f8"
+        "outputId": "d1f42d64-fac3-4ad9-c4d9-5970b123d9bd"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1546,7 +1550,6 @@
       "cell_type": "markdown",
       "source": [
         "## **🔹 Valores faltantes**\n",
-        "\n",
         "\n",
         "##### Contabilizo los datos nulos por columnas"
       ],
@@ -2745,7 +2748,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔹 Tablas Pivote**\n"
+        "## **🔹 Datos Agrupados**"
       ],
       "metadata": {
         "id": "TqgrnLvyRwPV"
@@ -3158,9 +3161,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔹 Categorización de vinos**\n",
+        "## **🔹 Discretización de variables**\n",
         "\n",
-        "#### Se clasifican los vinos en gama Baja, Media, Alta y Superior en función de la calidad de los mismos"
+        "#### Se recategorizan los vinos en gama Baja, Media, Alta y Superior en función de la calidad de los mismos."
       ],
       "metadata": {
         "id": "2Aw9uZ8NZ2Pq"
@@ -3190,6 +3193,7 @@
       "source": [
         "#df['gama'] = df['quality'].apply(gama)\n",
         "df['gama'] = df['quality'].apply(lambda x: 'Baja' if x <= 3 else ('Media' if x <= 6 else ('Alta' if x <= 8 else 'Superior')))\n",
+        "#df['gama'] = df.quality.apply(lambda x: 'Baja' if x <= 3 else ('Media' if x <= 6 else ('Alta' if x <= 8 else 'Superior')))\n",
         "df.head()"
       ],
       "metadata": {
@@ -3198,9 +3202,9 @@
           "height": 206
         },
         "id": "PqJQCefcbsOj",
-        "outputId": "aa3cedfa-f236-48d0-f918-cf4a0e8fe1c6"
+        "outputId": "3f530abd-f03c-4768-e6c0-4845b3d1bf86"
       },
-      "execution_count": 46,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3229,7 +3233,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7cea36aa-2963-4801-9e06-00b09fbbd2d3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f9e83778-bcfb-4adc-bb28-dafcb222d48c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3356,7 +3360,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7cea36aa-2963-4801-9e06-00b09fbbd2d3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f9e83778-bcfb-4adc-bb28-dafcb222d48c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3408,12 +3412,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7cea36aa-2963-4801-9e06-00b09fbbd2d3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f9e83778-bcfb-4adc-bb28-dafcb222d48c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7cea36aa-2963-4801-9e06-00b09fbbd2d3');\n",
+              "        const element = document.querySelector('#df-f9e83778-bcfb-4adc-bb28-dafcb222d48c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3433,8 +3437,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f47a548e-5529-45f7-99a6-c1c1af018abf\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f47a548e-5529-45f7-99a6-c1c1af018abf')\"\n",
+              "<div id=\"df-5cb9fd51-d401-4fdd-bbcd-e52e24a85575\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5cb9fd51-d401-4fdd-bbcd-e52e24a85575')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3553,7 +3557,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f47a548e-5529-45f7-99a6-c1c1af018abf button');\n",
+              "        document.querySelector('#df-5cb9fd51-d401-4fdd-bbcd-e52e24a85575 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -3570,7 +3574,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 49
         }
       ]
     },
@@ -3585,9 +3589,9 @@
           "height": 335
         },
         "id": "zMzZhYHzcCiM",
-        "outputId": "1c324efb-0791-4f7a-8f45-fca69e13998b"
+        "outputId": "dc2251cf-852e-4871-c9b6-fe37b7fabe45"
       },
-      "execution_count": 44,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3668,14 +3672,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 47
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## **Análisis de variables categóricas**"
+        "## **🔹 Análisis de variables categóricas**"
       ],
       "metadata": {
         "id": "J7gHyD0T5R21"
@@ -5373,6 +5377,16 @@
           "execution_count": 17
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **3️⃣ Análisis Exploratorio de Datos (EDA)**\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "7t2NIXdE05UY"
+      }
     },
     {
       "cell_type": "code",
